[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asharehub"
version = "0.3.3"
description = "Python SDK for AShareHub — Chinese A-Share market data API (29 endpoints)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AShareHub", email = "support@asharehub.com"}
]
keywords = ["asharehub", "china", "a-share", "stock", "market", "data", "api", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://asharehub.com"
Documentation = "https://asharehub.com/docs"
Repository = "https://github.com/ChuYiCui1/AshareHub"
"Bug Tracker" = "https://github.com/ChuYiCui1/AshareHub/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
